Fix map on mobile devices (#8)

--- a/css/theme-properorange.css
+++ b/css/theme-properorange.css
@@ -61,7 +61,7 @@
   background-color: #333333;
   opacity: 0.5;
   position: absolute;
-  content: '';
+  content: "";
   width: 100%;
   height: 100%;
   z-index: 1;
@@ -248,7 +248,7 @@ nav {
   color: #fff;
 }
 body {
-  font-family: 'Open Sans', "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-smoothing: antialiased;
   -webkit-font-smoothing: antialiased;
   color: #777777;
@@ -263,7 +263,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'Open Sans', "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: 300;
   margin: 0px;
   color: #333333;
@@ -573,7 +573,7 @@ nav .container {
 }
 .has-dropdown:before {
   display: inline-block;
-  font-family: 'Pe-icon-7-stroke';
+  font-family: "Pe-icon-7-stroke";
   speak: none;
   font-style: normal;
   font-weight: normal;
@@ -829,7 +829,7 @@ nav .container {
   background-color: #333333;
   opacity: 0.4;
   position: absolute;
-  content: '';
+  content: "";
   width: 100%;
   height: 100%;
   z-index: 1;
@@ -938,7 +938,7 @@ nav .container {
   background-color: #ff8700;
   opacity: 0.8;
   position: absolute;
-  content: '';
+  content: "";
   width: 100%;
   height: 100%;
   z-index: 1;
@@ -1590,8 +1590,8 @@ nav .container {
   margin-bottom: 16px;
 }
 @media all and (max-width: 1200px) {
-  .instagram li:nth-child(n+9),
-  .lightbox-gallery li:nth-child(n+9) {
+  .instagram li:nth-child(n + 9),
+  .lightbox-gallery li:nth-child(n + 9) {
     display: none;
   }
   .instagram li,
@@ -1600,8 +1600,8 @@ nav .container {
   }
 }
 @media all and (max-width: 900px) {
-  .instagram li:nth-child(n+7),
-  .lightbox-gallery li:nth-child(n+7) {
+  .instagram li:nth-child(n + 7),
+  .lightbox-gallery li:nth-child(n + 7) {
     display: none;
   }
   .instagram li,
@@ -1614,8 +1614,8 @@ nav .container {
   .lightbox-gallery {
     padding: 144px 0px;
   }
-  .instagram li:nth-child(n+5),
-  .lightbox-gallery li:nth-child(n+5) {
+  .instagram li:nth-child(n + 5),
+  .lightbox-gallery li:nth-child(n + 5) {
     display: none;
   }
   .instagram li,
@@ -1630,8 +1630,8 @@ nav .container {
 .contained-gallery .lightbox-gallery {
   padding: 185px 0px;
 }
-.contained-gallery .instagram li:nth-child(n+9),
-.contained-gallery .lightbox-gallery li:nth-child(n+9) {
+.contained-gallery .instagram li:nth-child(n + 9),
+.contained-gallery .lightbox-gallery li:nth-child(n + 9) {
   display: none;
 }
 .contained-gallery .instagram li,
@@ -1640,10 +1640,10 @@ nav .container {
   opacity: 0.7;
 }
 @media all and (max-width: 1024px) {
-  .contained-gallery .instagram li:nth-child(n+7) {
+  .contained-gallery .instagram li:nth-child(n + 7) {
     display: none;
   }
-  .contained-gallery .lightbox-gallery li:nth-child(n+7) {
+  .contained-gallery .lightbox-gallery li:nth-child(n + 7) {
     display: none;
   }
   .contained-gallery .instagram li,
@@ -1663,12 +1663,12 @@ nav .container {
   .contained-gallery .btn {
     margin-bottom: 0px;
   }
-  .contained-gallery .instagram li:nth-child(n+5),
-  .contained-gallery .lightbox-gallery li:nth-child(n+5) {
+  .contained-gallery .instagram li:nth-child(n + 5),
+  .contained-gallery .lightbox-gallery li:nth-child(n + 5) {
     display: block !important;
   }
-  .contained-gallery .instagram li:nth-child(n+7),
-  .contained-gallery .lightbox-gallery li:nth-child(n+7) {
+  .contained-gallery .instagram li:nth-child(n + 7),
+  .contained-gallery .lightbox-gallery li:nth-child(n + 7) {
     display: none !important;
   }
   .contained-gallery .instagram li,
@@ -1815,7 +1815,7 @@ p.question {
   background-color: #333333;
   opacity: 0.4;
   position: absolute;
-  content: '';
+  content: "";
   width: 100%;
   height: 100%;
   z-index: 1;
@@ -1860,7 +1860,7 @@ p.question {
   color: #fff;
   font-size: 30px;
   line-height: 36px;
-  font-family: 'Open Sans', "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: 300;
 }
 .tweets-feed .tweet a {
@@ -1898,7 +1898,7 @@ p.question {
   display: inline-block;
 }
 .contact-tweets .map-holder {
-  position: absolute;
+  position: relative;
   height: 100%;
   padding: 0px;
   top: 0px;
@@ -1908,7 +1908,7 @@ p.question {
   display: block !important;
 }
 .map-holder:before {
-  content: '';
+  content: "";
   position: absolute;
   top: 0;
   left: 0;
@@ -1965,7 +1965,7 @@ p.question {
   overflow: hidden;
 }
 .fullwidth-map.screen:before {
-  content: '';
+  content: "";
   position: absolute;
   width: 100%;
   height: 100%;
@@ -2117,10 +2117,10 @@ input.error {
   border-radius: 20px;
 }
 .form-error {
-  background-color: #D74B4B;
+  background-color: #d74b4b;
 }
 form .field-error {
-  background: #D74B4B !important;
+  background: #d74b4b !important;
 }
 @media all and (max-width: 767px) {
   form.register input,
